@@ -1,0 +1,21 @@
+/*
+ * $Id$
+ *
+ * Copyright 2020 Allen D. Ball.  All rights reserved.
+ */
+package ball.upnp;
+
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+import static lombok.AccessLevel.PROTECTED;
+
+/**
+ * Abstract base class for {@link.uri http://www.upnp.org/ UPnP} services.
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ * @version $Revision$
+ */
+@NoArgsConstructor(access = PROTECTED) @ToString
+public abstract class AbstractService implements AnnotatedService {
+}
