@@ -1,0 +1,27 @@
+/*
+ * $Id$
+ *
+ * Copyright 2020 Allen D. Ball.  All rights reserved.
+ */
+package ball.upnp.annotation;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.Retention;
+import java.lang.annotation.Target;
+
+import static java.lang.annotation.ElementType.TYPE;
+import static java.lang.annotation.RetentionPolicy.RUNTIME;
+
+/**
+ * {@link ball.upnp.AnnotatedService} service type
+ * {@link java.lang.annotation.Annotation}.
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ * @version $Revision$
+ */
+@Documented
+@Retention(RUNTIME)
+@Target({ TYPE })
+public @interface ServiceType {
+    String value();
+}
