@@ -1,0 +1,17 @@
+/*
+ * $Id$
+ *
+ * Copyright 2020 Allen D. Ball.  All rights reserved.
+ */
+/**
+ * Provides {@link java.lang.annotation.Annotation} implementation classes.
+ *
+ * @see java.lang.annotation.Annotation
+ * @see javax.annotation
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ */
+@Manifest.Section
+package ball.upnp.annotation;
+
+import ball.annotation.Manifest;
