@@ -1,0 +1,68 @@
+/*
+ * $Id$
+ *
+ * Copyright 2020 Allen D. Ball.  All rights reserved.
+ */
+package ball.upnp.annotation.processing;
+
+import ball.annotation.ServiceProviderFor;
+import ball.annotation.processing.AbstractAnnotationProcessor;
+import ball.annotation.processing.For;
+import ball.upnp.AnnotatedService;
+import ball.upnp.annotation.ServiceId;
+import java.net.URI;
+import javax.annotation.processing.Processor;
+import javax.annotation.processing.RoundEnvironment;
+import javax.lang.model.element.Element;
+import javax.lang.model.element.TypeElement;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+import static javax.tools.Diagnostic.Kind.ERROR;
+import static org.apache.commons.lang3.StringUtils.isNotEmpty;
+
+/**
+ * {@link ServiceId} annotation {@link Processor}.
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ * @version $Revision$
+ */
+@ServiceProviderFor({ Processor.class })
+@For({ ServiceId.class })
+@NoArgsConstructor @ToString
+public class ServiceIdProcessor extends AbstractAnnotationProcessor {
+    @Override
+    protected void process(RoundEnvironment env,
+                           TypeElement annotation,
+                           Element element) throws Exception {
+        String string = element.getAnnotation(ServiceId.class).value();
+
+        if (isNotEmpty(string)) {
+            if (isAssignable(element.asType(), AnnotatedService.class)) {
+                try {
+                    new URI(string);
+                } catch (Exception exception) {
+                    print(ERROR,
+                          element,
+                          element.getKind() + " annotated with "
+                          + AT + annotation.getSimpleName()
+                          + " but cannot convert `" + String.valueOf(string)
+                          + "' to " + URI.class.getName());
+                }
+            } else {
+                print(ERROR,
+                      element,
+                      element.getKind() + " annotated with "
+                      + AT + annotation.getSimpleName()
+                      + " but does not implement "
+                      + AnnotatedService.class.getName());
+            }
+        } else {
+            print(ERROR,
+                  element,
+                  element.getKind() + " annotated with "
+                  + AT + annotation.getSimpleName()
+                  + " but does not specify value()");
+        }
+    }
+}
