@@ -1,0 +1,17 @@
+/*
+ * $Id$
+ *
+ * Copyright 2020 Allen D. Ball.  All rights reserved.
+ */
+/**
+ * Provides {@link javax.annotation.processing.Processor} implementation
+ * classes.
+ *
+ * @see javax.annotation.processing
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ */
+@Manifest.Section
+package ball.upnp.annotation.processing;
+
+import ball.annotation.Manifest;
